1)fix path 2)fix html templates 3)fix structure

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
   "env": "local",
-  "dataBasePath": "storage.db"
+  "dataBasePath": "./storage/storage.db",
+  "pagesPath": "./web/templates/"
 }
-
