add rabbitMQ, update docker + add health check, update logger, fix .sh scripts

--- a/.env
+++ b/.env
@@ -20,5 +20,13 @@ REDIS_ADDR=localhost:6379
 REDIS_PASSWORD=1234
 REDIS_DB_NUM=0
 
+# Настройки RabbitMQ
+RABBITMQ_SCHEME=amqp
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_VHOST=/
+
 # Ключ сессии
 SESSION_KEY=wfkjhwe328
