--- a/Dockerfile.goapp
+++ b/Dockerfile.goapp
@@ -17,10 +17,11 @@ RUN apk --no-cache add bash
 
 COPY --from=builder /user/local/src/bin/app /
 COPY --from=builder /user/local/src/migrations /migrations
+COPY --from=builder /user/local/src/config/ /config
 
-COPY wait-for-it.sh /wait-for-it.sh
+COPY scripts/wait-for-it.sh /wait-for-it.sh
 
-CMD ["./wait-for-it.sh", "postgres:5432", "--", "/app"]
+# Ожидание запуска всех необходимых сервисов
+CMD ["/wait-for-it.sh", "postgres:5432", "rabbitmq:5672", "redis:6379", "--", "/app"]
 
 EXPOSE 8080
-
