--- a/config/rabbitMQ.yaml
+++ b/config/rabbitMQ.yaml
@@ -1,17 +1,16 @@
-rabbitmq:
-  exchange: "aggregation_logs"          # Имя обменника
-  routing_key: ""                        # Ключ маршрутизации, может быть пустым для обменников типа "fanout"
-  mandatory: true                        # Флаг обязательности сообщения, если установлено в true, сообщения будут возвращены, если не могут быть маршрутизированы
-  immediate: false                       # Флаг немедленного сообщения, устанавливается в false, чтобы избежать потенциальных проблем с доставкой сообщений
+exchange: "aggregation_logs"          # Имя обменника
+routing_key: ""                        # Ключ маршрутизации, может быть пустым для обменников типа "fanout"
+mandatory: true                        # Флаг обязательности сообщения, если установлено в true, сообщения будут возвращены, если не могут быть маршрутизированы
+immediate: false                       # Флаг немедленного сообщения, устанавливается в false, чтобы избежать потенциальных проблем с доставкой сообщений
 
 publishing:
   content_type: "text/plain"             # Тип содержимого (например, "text/plain", "application/json")
   content_encoding: "utf-8"              # Кодировка содержимого (например, "utf-8")
   delivery_mode: 2                       # Режим доставки: 1 (только в памяти), 2 (сохранение на диске)
   priority: 6                            # Приоритет сообщения от 0 до 9 (0 - низкий, 9 - высокий)
-  correlation_id: "123456"               # Идентификатор корреляции для связывания запросов и ответов
+  correlation_id: ""                     # Идентификатор корреляции для связывания запросов и ответов
   reply_to: "log_queue"                  # Очередь для отправки ответа на запрос
-  expiration: "60000"                    # Время жизни сообщения в миллисекундах (60000 = 60 секунд)
-  type: "log"                            # Тип сообщения
+  expiration: ""                         # Время жизни сообщения в миллисекундах (60000 = 60 секунд)
+  type: ""                               # Тип сообщения
   user_id: "guest"                       # Идентификатор пользователя, создавшего сообщение
   app_id: "NoteProject"                  # Идентификатор приложения, создавшего сообщение
