--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.postgres
     container_name: postgres
     environment:
       POSTGRES_USER: postgres
@@ -20,22 +22,6 @@ services:
       retries: 5
       start_period: 30s
       timeout: 5s
-
-  # Дополнительный контейнер для создания схемы базы данных
-  initdb:
-    image: postgres:latest
-    depends_on:
-      - postgres
-    environment:
-      PGPASSWORD: 12345
-    command: >
-      bash -c "
-      until pg_isready -h postgres -U postgres; do
-        sleep 1;
-      done;
-      psql -h postgres -U postgres -tc \"SELECT 1 FROM pg_database WHERE datname = 'NoteProject'\" | grep -q 1 || psql -h postgres -U postgres -c \"CREATE DATABASE \\\"NoteProject\\\"\";"
-    networks:
-      - mynetwork
 
   redis:
     image: redis:latest
