add context, fix storage, handlers, tests, rename functions

--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ DB_NAME=NoteProject
 DB_USERNAME=postgres
 DB_PASSWORD=12345
 DB_SSLMODE=disable
-DB_DELAY=5
-DB_ATTEMPTS=5
+DB_DELAY=10
+DB_ATTEMPTS=10
 
 # Настройки Redis
 REDIS_ADDR=localhost:6379
@@ -30,3 +30,6 @@ RABBITMQ_VHOST=/
 
 # Ключ сессии
 SESSION_KEY=wfkjhwe328
+
+# Хеширование
+HASH_SALT= "#je9sd23-DK"
